Ejercicio de receta alfajor + link en noticias

--- a/Ejercicios-HTML/ej_noticia.html
+++ b/Ejercicios-HTML/ej_noticia.html
@@ -11,6 +11,8 @@
       <img src="imagenes/iconomundo.png" />
       <h1>Diario On-line</h1>
     </header>
+    <nav>
+        <a href="ej_listas.html"> cocina</a>
     <section>
       <h3>
         <strong> CordoBici </strong>
