--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -1,43 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Ejercicio Formulario</title>
     <style>
-        form {
-            display: block;
-            margin-top: 0em;
-        }
+      form {
+        display: block;
+        margin-top: 0em;
+      }
     </style>
-</head>
-<body>
-<!--Cree un Formulario con los campos que se proponen a continuacion-->
-<!--Agregue el atributo legend-->
+  </head>
+  <body>
+    <!-- Cree un Formulario con los campos que se proponen a continuación -->
+    <!-- Agregue el atributo legend -->
 
-<!--Si tienes dudas de como hacer un formulario, puedes consultar:
-    https://www.w3schools.com/html/tryit.asp?filename=tryhtml_elem_output-->
+    <!-- Si tienes dudas de cómo hacer un formulario, puedes consultar:
+    https://www.w3schools.com/html/tryit.asp?filename=tryhtml_elem_output -->
 
-<h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
-Nombre:
-Apellido:
-Sexo: Masculino Femenino
-Edad:
-Email:
-Usuario:
-Password:
-Confirmar Password:
+    <h3>
+      ¡Suscríbase a Nuestro Portal de Noticias! Crear una cuenta es rápido!
+    </h3>
+    <form id="formulario_suscripcion">
+      <p>
+        Nombre:
+        <input type="text" name="nombre" placeholder="Ingrese su nombre" />
+      </p>
+      <p>
+        Apellido:
+        <input type="text" name="apellido" placeholder="Ingrese su apellido" />
+      </p>
+      <p>
+        Sexo: Masculino
+        <input type="radio" name="sexo" value="masculino" /> Femenino
+        <input type="radio" name="sexo" value="femenino" />
+      </p>
+      <p>
+        Edad: <input type="number" name="edad" placeholder="Ingrese su edad" />
+      </p>
+      <p>
+        Email:
+        <input type="email" name="email" placeholder="email@dominio.com" />
+      </p>
+      <p>Usuario: <input type="text" name="usuario" /></p>
+      <p>
+        Password:
+        <input
+          type="password"
+          name="pass"
+          placeholder="Ingrese su contraseña"
+        />
+      </p>
+      <p>
+        Confirmar Password:
+        <input
+          type="password"
+          name="confirmar_pass"
+          placeholder="Confirme su contraseña"
+        />
+      </p>
+      <p>
+        Tipo de servicio: Free
+        <input type="checkbox" name="tipo_servicio" value="free" /> Standard
+        <input type="checkbox" name="tipo_servicio" value="Standard" /> Premium
+        <input type="checkbox" name="tipo_servicio" value="Premium" />
+      </p>
+      <p>
+        Tema:
+        <select name="" id="">
+          <option value="Politica">Política</option>
+          <option value="Negocios">Negocios</option>
+          <option value="Tecnología">Tecnología</option>
+          <option value="Salud">Salud</option>
+        </select>
+      </p>
+      <p>Agregue un comentario: <textarea> </textarea></p>
 
-Tipo de servicio: Free / Standard / Premium
-Tema:
-Política
-Negocios
-Tecnología
-Salud
-
-Agregue un comentario:
-
-Boton de Enviar
-
-
-</body>
+      <button>Botón de Enviar</button>
+    </form>
+  </body>
 </html>
