--- a/Ejercicios-HTML/ej_tablas.html
+++ b/Ejercicios-HTML/ej_tablas.html
@@ -15,6 +15,9 @@
   <body>
     <!--  Joaquin Lista estuvo aqui :)  -->
     <table>
+      <caption>
+        Congresos y eventos
+      </caption>
       <thead>
         <tr>
           <th>Siglas</th>
