--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -22,58 +22,102 @@
     </h3>
     <form id="formulario_suscripcion">
       <p>
-        Nombre:
-        <input type="text" name="nombre" placeholder="Ingrese su nombre" />
+        <label for="nombre">Nombre:</label>
+        <input
+          type="text"
+          id="nombre"
+          name="nombre"
+          placeholder="Ingrese su nombre"
+        />
       </p>
       <p>
-        Apellido:
-        <input type="text" name="apellido" placeholder="Ingrese su apellido" />
+        <label for="apellido">Apellido:</label>
+        <input
+          type="text"
+          id="apellido"
+          name="apellido"
+          placeholder="Ingrese su apellido"
+        />
       </p>
       <p>
-        Sexo: Masculino
-        <input type="radio" name="sexo" value="masculino" /> Femenino
-        <input type="radio" name="sexo" value="femenino" />
+        Sexo:
+        <label for="masculino">Masculino</label>
+        <input type="radio" id="masculino" name="sexo" value="masculino" />
+        <label for="femenino">Femenino</label>
+        <input type="radio" id="femenino" name="sexo" value="femenino" />
       </p>
       <p>
-        Edad: <input type="number" name="edad" placeholder="Ingrese su edad" />
+        <label for="edad">Edad:</label>
+        <input
+          type="number"
+          id="edad"
+          name="edad"
+          placeholder="Ingrese su edad"
+        />
       </p>
       <p>
-        Email:
-        <input type="email" name="email" placeholder="email@dominio.com" />
+        <label for="email">Email:</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="email@dominio.com"
+        />
       </p>
-      <p>Usuario: <input type="text" name="usuario" /></p>
       <p>
-        Password:
+        <label for="usuario">Usuario:</label>
+        <input type="text" id="usuario" name="usuario" />
+      </p>
+      <p>
+        <label for="pass">Password:</label>
         <input
           type="password"
+          id="pass"
           name="pass"
           placeholder="Ingrese su contraseña"
         />
       </p>
       <p>
-        Confirmar Password:
+        <label for="confirmar_pass">Confirmar Password:</label>
         <input
           type="password"
+          id="confirmar_pass"
           name="confirmar_pass"
           placeholder="Confirme su contraseña"
         />
       </p>
       <p>
-        Tipo de servicio: Free
-        <input type="checkbox" name="tipo_servicio" value="free" /> Standard
-        <input type="checkbox" name="tipo_servicio" value="Standard" /> Premium
-        <input type="checkbox" name="tipo_servicio" value="Premium" />
+        Tipo de servicio:
+        <label for="free">Free</label>
+        <input type="checkbox" id="free" name="tipo_servicio" value="free" />
+        <label for="standard">Standard</label>
+        <input
+          type="checkbox"
+          id="standard"
+          name="tipo_servicio"
+          value="Standard"
+        />
+        <label for="premium">Premium</label>
+        <input
+          type="checkbox"
+          id="premium"
+          name="tipo_servicio"
+          value="Premium"
+        />
       </p>
       <p>
-        Tema:
-        <select name="" id="">
+        <label for="tema">Tema:</label>
+        <select id="tema" name="tema">
           <option value="Politica">Política</option>
           <option value="Negocios">Negocios</option>
           <option value="Tecnología">Tecnología</option>
           <option value="Salud">Salud</option>
         </select>
       </p>
-      <p>Agregue un comentario: <textarea> </textarea></p>
+      <p>
+        <label for="comentario">Agregue un comentario:</label>
+        <textarea id="comentario" name="comentario"></textarea>
+      </p>
 
       <button>Botón de Enviar</button>
     </form>
