--- a/Ejercicios-HTML/ej_animales.html
+++ b/Ejercicios-HTML/ej_animales.html
@@ -18,8 +18,11 @@
     </p>
     <p>
         El caballo emite el siguiente sonido:
-        <!--Insertar audio de la carpeta resources-->
-    </p>
+        <audio src="resources/horse.ogg">
+            <p>El navegador no soporta audio</p>
+        </audio>
+
+</p>
 </div>
 
 <div>
@@ -34,8 +37,8 @@
     </p>
     <p>
         En Alaska, cuando el salmón remonta el río para el desove estival, los osos pueden reunirse para pescar.
-        <!--Insertar Video de osos pescando ubicado en la carpeta de resources-->
-    </p>
+        <video src="resources/movie.mp4" controls></video>  
+        <p>Tu navegador no reproduce videos</p>  </p>
 </div>
 <div>
     <h2>León</h2>
@@ -46,7 +49,7 @@
         Es un animal de gran tamaño, ya que un león macho puede llegar a pesar aproximadamente hasta 300 kilogramos,
         siendo de esta manera el félido vivo mas grande después de su pariente el Tigre.
     </p>
-    <!--Insertar video de youtube sobre leones-->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/pjaozqqkuo0?si=-sL-lnWmZ5HFTBF4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </body>
 </html>
