--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -13,6 +13,18 @@
       body {
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
       }
+      a:link {
+        color: chartreuse;
+      }
+      a:visited {
+        color: chartreuse;
+      }
+      a:hover {
+        font-size: 1.4em;
+      }
+      a:active {
+        font-weight: bold;
+      }
     </style>
   </head>
   <body>
