--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -1,44 +1,59 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>CV Nombre Apellido</title>
-</head>
-<body>
-
-<div>
-    <h1>Nombre Alumno</h1>
-    <h2>Ing. en Computacion</h2>
-</div>
-
-<div>
-    <h3>Datos Personales</h3>
-    <p><span>Fecha de Nacimiento:</span> dd/mm/aaaa</p>
-    <p><span>Email:</span> email@email.com</p>
-</div>
-
-<div>
-    <h3>Formacion Academica</h3>
-    <p><span>Carrera:</span> Ingeniería XXXXX</p>
-    <p><span>Universidad:</span> Universidad Católica de Córdoba</p>
-    <p><span>Año de Ingreso:</span> 2018</p>
-</div>
-
-<div>
-    <h3>Cursos</h3>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gugi&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital@1&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" href="imagenes/favicon.png" />
+    <link rel="stylesheet" href="mi_estilo.css" />
+  </head>
+  <body>
+    <div>
+      <h1>Nombre Alumno</h1>
+      <h2>Ing. en Computacion</h2>
+      <img
+        id="Principal"
+        src="imagenes/icono_usuario.jpg"
+        alt="icono_usuario"
+      />
+    </div>
 
     <div>
+      <h3>Datos Personales</h3>
+      <p><span>Fecha de Nacimiento:</span> dd/mm/aaaa</p>
+      <p><span>Email:</span> email@email.com</p>
+    </div>
+
+    <div>
+      <h3>Formacion Academica</h3>
+      <p><span>Carrera:</span> Ingeniería XXXXX</p>
+      <p><span>Universidad:</span> Universidad Católica de Córdoba</p>
+      <p><span>Año de Ingreso:</span> 2018</p>
+    </div>
+
+    <div>
+      <h3>Cursos</h3>
+
+      <div>
         <h4>Nombre Curso 1</h4>
         <p><span>Lugar:</span> Nombre Institución</p>
-        <p><span>Año:</span> XXXX </p>
-    </div>
+        <p><span>Año:</span> XXXX</p>
+      </div>
 
-    <div>
+      <div>
         <h4>Nombre Curso 2</h4>
         <p><span>Lugar:</span> Nombre Institución</p>
-        <p><span>Año:</span> XXXX </p>
+        <p><span>Año:</span> XXXX</p>
+      </div>
     </div>
-</div>
-
-</body>
+  </body>
 </html>
