--- a/Ejercicios-JavaScript/2_web.html
+++ b/Ejercicios-JavaScript/2_web.html
@@ -10,7 +10,7 @@
     <link href="miEstilo.css" type="text/css" rel="stylesheet" />
     <script type="text/javascript" src="misFunciones.js"></script>
   </head>
-  <body class="body-num" onload="cargarresultado()">
+  <body class="body-num" onload="cargarLocalStorage()">
     <div class="centrado div-conver">
       <h1>Conversor de Unidades</h1>
       <form>
